Change width of #price-list, #contact-form, #thank-you-page and #error-page to 99% to stop border breaking out to the right of the screen on smaller devices

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -642,7 +642,7 @@ footer {
 
     #price-list, #contact-form, #thank-you-page-content, #error-page {
         clear: both;
-        width: 100%;
+        width: 99%;
         border-radius: 0;
         box-shadow: none;
         margin: 0;
